--- a/styles/app.css
+++ b/styles/app.css
@@ -55,28 +55,26 @@
 }
 
 @font-face {
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-weight: 100 900;
   font-style: italic;
   font-display: optional;
-  src: url("/fonts/ibm-plex-sans-latin-italic.woff2") format("woff2");
+  src: url('/fonts/ibm-plex-sans-latin-italic.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: "IBM Plex Sans";
+  font-family: 'IBM Plex Sans';
   font-weight: 100 900;
   font-style: normal;
   font-display: optional;
-  src: url("/fonts/ibm-plex-sans-latin-regular.woff2") format("woff2");
+  src: url('/fonts/ibm-plex-sans-latin-regular.woff2') format('woff2');
 }
 
 html {
   text-size-adjust: 100%;
   scroll-behavior: smooth;
-}
 
-@media (prefers-reduced-motion: reduce) {
-  html {
+  @media (prefers-reduced-motion: reduce) {
     scroll-behavior: auto;
   }
 }
@@ -87,9 +85,8 @@ body {
   padding: 0;
   height: 100%;
   color: var(--color-text);
-  font-family: "IBM Plex Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
+  font-family: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* stylelint-disable-next-line */
@@ -152,4 +149,5 @@ h5,
 h6 {
   hyphens: auto;
   overflow-wrap: break-word;
+  font-weight: revert;
 }
